--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "primera-app-react",
   "private": true,
   "version": "0.0.0",
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+     "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
